--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,11 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - albertfgu
+  - aakashlahoti
+  - AvivBick
+  - kevinli573
+  - sukjunhwang
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - state-spaces/s4
+  - state-spaces/mamba
+  - AvivBick/awesome-ssm-ml
