--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: The Goomblog # blog_name will be displayed in your blog page
+blog_name: the goomblog # blog_name will be displayed in your blog page
 blog_description: # a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 lsi: true # produce an index for related posts
