--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,6 @@ last_name: Lab
 email:
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Homepage of the Goomba AI Lab @ CMU MLD.
-  # A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
@@ -405,7 +404,7 @@ lazy_loading_images: true # enables lazy loading of images (recommended)
 
 enable_google_analytics: false # enables google analytics
 enable_cronitor_analytics: false # enables cronitor RUM analytics
-enable_umami_analytics: false
+enable_umami_analytics: true
 enable_google_verification: false # enables google site verification
 enable_bing_verification: false # enables bing site verification
 enable_masonry: true # enables automatic project cards arrangement
